--- a/career.html
+++ b/career.html
@@ -53,9 +53,8 @@
 									<li><a href="history.html">ПРО НАС</a></li>
 									<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
 									<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
-									<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
-									<li><a href="career.html">КАР’ЄРА</a></li>
-									<li><a href="contacts.html">КОНТАКТИ</a></li>
+									<li><a class="choosen" href="career.html">КАР’ЄРА</a></li>
+									<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>		
 								</ul>
 							</div>
 							<!-- /.navbar-collapse --> 
@@ -64,7 +63,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-3 col-md-8">
+				<div class="firstSection--content col-md-offset-3 col-md-6">
 					<p class="firstSection--content_mainText">Ми вже досягли успіху
 						і готові допомогти вам
 					реалізувати свій потенціал</p>
@@ -127,7 +126,7 @@
 					</div>
 
 					<div class="form-group col-sm-12">
-						<button class="btn btn-danger fz18 standat--textcolor fira--sans">ВІДПРАВИТИ</button>
+							<button class="inv-button">ВІДПРАВИТИ</button>
 					</div>
 				</form>
 			</div>
