--- a/media.html
+++ b/media.html
@@ -53,9 +53,8 @@
 									<li><a href="history.html">ПРО НАС</a></li>
 									<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
 									<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
-									<li><a class="choosen" href="media.html">МЕДІА-ЦЕНТР</a></li>
 									<li><a href="career.html">КАР’ЄРА</a></li>
-								
+                                    <li><a class="choosen" href="media.html">МЕДІА-ЦЕНТР</a></li>
 								</ul>
 							</div>
 							<!-- /.navbar-collapse --> 
@@ -98,7 +97,8 @@
                     <figure>
                         <figcaption >
                             <p class="box--header">Група Компаній «ЛІГА» працює як відповідальний бізнес</p></figcaption>
-                        <p><img class="img-responsive" src="img/careerWork.jpg" alt="" /></p>
+                            <p>
+                                <img class="img-responsive" src="img/history-slider-1.jpg" alt="" /></p>
                         <figcaption>
                             <p>30 серпня 2018 року</p>
                             <p class="fz20">Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
@@ -110,7 +110,7 @@
                         <figure>
                                 <figcaption >
                                     <p class="box--header">Група Компаній «ЛІГА» працює як відповідальний бізнес</p></figcaption>
-                                <p><img class="img-responsive" src="img/careerWork.jpg" alt="" /></p>
+                                <p><img class="img-responsive" src="img/history-slider-1.jpg" alt="" /></p>
                                 <figcaption>
                                     <p>30 серпня 2018 року</p>
                                     <p>Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
@@ -122,7 +122,7 @@
                         <figure>
                                 <figcaption >
                                     <p class="box--header">Група Компаній «ЛІГА» працює як відповідальний бізнес</p></figcaption>
-                                <p><img class="img-responsive" src="img/careerWork.jpg" alt="" /></p>
+                                <p><img class="img-responsive" src="img/history-slider-1.jpg" alt="" /></p>
                                 <figcaption>
                                     <p>30 серпня 2018 року</p>
                                     <p>Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
@@ -134,7 +134,7 @@
                         <figure>
                                 <figcaption >
                                     <p class="box--header">Група Компаній «ЛІГА» працює як відповідальний бізнес</p></figcaption>
-                                <p><img class="img-responsive" src="img/careerWork.jpg" alt="" /></p>
+                                <p><img class="img-responsive" src="img/history-slider-1.jpg" alt="" /></p>
                                 <figcaption>
                                     <p>30 серпня 2018 року</p>
                                     <p>Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
@@ -146,7 +146,7 @@
                         <figure>
                                 <figcaption >
                                     <p class="box--header">Група Компаній «ЛІГА» працює як відповідальний бізнес</p></figcaption>
-                                <p><img class="img-responsive" src="img/careerWork.jpg" alt="" /></p>
+                                <p><img class="img-responsive" src="img/history-slider-1.jpg" alt="" /></p>
                                 <figcaption>
                                     <p>30 серпня 2018 року</p>
                                     <p>Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
@@ -158,7 +158,7 @@
                         <figure>
                                 <figcaption >
                                     <p class="box--header">Група Компаній «ЛІГА» працює як відповідальний бізнес</p></figcaption>
-                                <p><img class="img-responsive" src="img/careerWork.jpg" alt="" /></p>
+                                <p><img class="img-responsive" src="img/history-slider-1.jpg" alt="" /></p>
                                 <figcaption>
                                     <p>30 серпня 2018 року</p>
                                     <p>Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
@@ -170,7 +170,7 @@
                             <figure>
                                     <figcaption >
                                         <p class="box--header">Група Компаній «ЛІГА» працює як відповідальний бізнес</p></figcaption>
-                                    <p><img class="img-responsive" src="img/careerWork.jpg" alt="" /></p>
+                                    <p><img class="img-responsive" src="img/history-slider-1.jpg" alt="" /></p>
                                     <figcaption>
                                         <p>30 серпня 2018 року</p>
                                         <p>Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
@@ -182,7 +182,7 @@
                             <figure>
                                     <figcaption >
                                         <p class="box--header">Група Компаній «ЛІГА» працює як відповідальний бізнес</p></figcaption>
-                                    <p><img class="img-responsive" src="img/careerWork.jpg" alt="" /></p>
+                                    <p><img class="img-responsive" src="img/history-slider-1.jpg" alt="" /></p>
                                     <figcaption>
                                         <p>30 серпня 2018 року</p>
                                         <p>Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
@@ -194,7 +194,7 @@
                             <figure>
                                     <figcaption >
                                         <p class="box--header">Група Компаній «ЛІГА» працює як відповідальний бізнес</p></figcaption>
-                                    <p><img class="img-responsive" src="img/careerWork.jpg" alt="" /></p>
+                                    <p><img class="img-responsive" src="img/history-slider-1.jpg" alt="" /></p>
                                     <figcaption>
                                         <p>30 серпня 2018 року</p>
                                         <p>Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
