--- a/career.html
+++ b/career.html
@@ -79,14 +79,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="secondSection--content col-md-8">
-				<p class="secondSection--content_mainText" data-aos="fade-up">кар'єра у групi компанiй  лiга</p>
+				<p class="standart--header black" data-aos="fade-up">кар'єра у групi компанiй  лiга</p>
 
-				<p class="fz18 standat--textcolor fira--sans" data-aos="fade-left" data-aos-delay="150">ГК ЛІГА надає широкі можливості для розкриття власного потенціалу та кар'єрного зростання своїх працівників. Наш колектив - це команда професіоналів, яка реалізує загальну велику місію - крок за кроком ми БУДУЄМО КРАЇНУ МРІЇ, в якій хочемо жити.
+				<p class="standat--textcolor fira--sans" data-aos="fade-left" data-aos-delay="150">ГК ЛІГА надає широкі можливості для розкриття власного потенціалу та кар'єрного зростання своїх працівників. Наш колектив - це команда професіоналів, яка реалізує загальну велику місію - крок за кроком ми БУДУЄМО КРАЇНУ МРІЇ, в якій хочемо жити.
 				</p>
 
-				<p class="fz18 standat--textcolor fira--sans" data-aos="fade-left" data-aos-delay="350">
+				<p class="standat--textcolor fira--sans" data-aos="fade-left" data-aos-delay="350">
 				Ми прагнемо працювати з однодумцями, які поділяють наші цінності, та чия енергія і професійні знання будуть сприяти в досягненні ГК ЛІГА амбітних цілей. Ми завжди раді натхненним кандитам, які бажають приєднатися до нашої команди.</p>			
-				<p class="fz18 standat--textcolor fira--sans" data-aos="fade-left" data-aos-delay="550">
+				<p class="standat--textcolor fira--sans" data-aos="fade-left" data-aos-delay="550">
 				Якщо ви хочете приєднатися до нас, просто заповніть форму на сайті або відправляйте нам своє резюме.</p>
 <!-- 
 				<div class="secondSection--content_verticalLine" data-aos="fade-bottom" data-aos-delay="550"></div> -->
@@ -104,22 +104,22 @@
 		<div class="row">
 			<div class="col-md-offset-2 col-md-4">
 				<form action="#" class="career--ts_form">
-					<p class="secondSection--content_mainText standat--textcolor" data-aos="fade-up">ВІДПРАВИТИ РЕЗЮМЕ</p>
+					<p class="secondSection--content_mainText standart--header" data-aos="fade-up">ВІДПРАВИТИ РЕЗЮМЕ</p>
 					<div class="form-group" data-aos="fade-left" data-aos-delay="150">
-						<label class="col-sm-12 control-label fz18 standat--textcolor fira--sans" >Ваше iм’я та прiзвище</label>
+						<label class="col-sm-12 control-label standat--textcolor fira--sans" >Ваше iм’я та прiзвище</label>
 						<div class="col-sm-12">
 							<input type="text" class="form-control" >
 						</div>
 					</div>
 					<div class="form-group" data-aos="fade-right" data-aos-delay="350">
-						<label class="col-sm-12 control-label fz18 standat--textcolor fira--sans">Я хочу працювати в: </label>
+						<label class="col-sm-12 control-label standat--textcolor fira--sans">Я хочу працювати в: </label>
 						<div class="col-sm-12">
 							<input type="text" class="form-control" >
 						</div>
 					</div>
 					
 					<div class="form-group"data-aos="fade-left" data-aos-delay="550">
-						<label for="inputPassword3" class="col-sm-12 control-label fz18 standat--textcolor fira--sans">Ваш e-mail </label>
+						<label for="inputPassword3" class="col-sm-12 control-label standat--textcolor fira--sans">Ваш e-mail </label>
 						<div class="col-sm-12">
 							<input type="email" class="form-control">
 						</div>
