--- a/career.html
+++ b/career.html
@@ -30,7 +30,7 @@
 <body>
 
 	<!-- FIRST SCREEN -->
-	<section class="firstSection career-fs">
+	<section class="firstSection career-fs childPage">
 		<div class="container-fluid">
 			<div class="row">
 
@@ -63,7 +63,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-3 col-md-6">
+				<div class="firstSection--content col-md-offset-3 col-md-8">
 					<p class="firstSection--content_mainText">Ми вже досягли успіху
 						і готові допомогти вам
 					реалізувати свій потенціал</p>
@@ -125,14 +125,19 @@
 						</div>
 					</div>
 
+					
 					<div class="form-group col-sm-12">
-							<button class="inv-button">ВІДПРАВИТИ</button>
+							
 					</div>
 				</form>
 			</div>
 			<div class="col-md-6 nopadding ">
 				<img src="img/careerWork.png" alt="" class="img-uncolored img-responsive">
 			</div>
+		</div>
+		<div class="form-group rowButton col-sm-12">
+				<button class="inv-button col-sm-6">ВІДПРАВИТИ</button>
+				<button class="inv-button col-sm-6">ДОДАТИ РЕЗЮМЕ</button>
 		</div>
 	</div>
 </section>
