--- a/contacts.html
+++ b/contacts.html
@@ -33,7 +33,7 @@
 <body class="contacts">
 
 	<!-- FIRST SCREEN -->
-	<section class="firstSection contacts-fs">
+	<section class="firstSection contacts-fs childPage">
 		<div class="container-fluid">
 			<div class="row">
 
