--- a/history.html
+++ b/history.html
@@ -30,7 +30,7 @@
 <body>
 
 	<!-- FIRST SCREEN -->
-	<section class="firstSection history-fs">
+	<section class="firstSection history-fs childPage">
 		<div class="container-fluid">
 			<div class="row">
 
@@ -63,7 +63,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-3 col-md-6">
+				<div class="firstSection--content col-md-offset-4 col-md-8">
 					<p class="firstSection--content_mainText">Об'єднання іноваційних <br> та
                         динамічно зростаючих бізнесів, <br>
                         які діють на різних ринках</p>
@@ -102,7 +102,7 @@
 <section class="thirdSection--history">
 	<div class="container-fluid">
 		<div class="row">
-				<P class="nagl-rada--header standart--header">НАГЛЯДОВА РАДА</P>
+				<P class="nagl-rada--header standart--header"> НАШІ ЦІННОСТІ</P>
 			<div class="thirdSection--history_content ">
 					<div class="owl-carousel">
 							<div> 
@@ -224,7 +224,7 @@
 					<figcaption>
 						<p class="name">Михайло Бондаренко</p>
 						<p class="role">Член Наглядової Ради</p>
-						<p class="role">СЕО Möbius Group.</p>
+						<p class="role">Управляющий партнер Lamor Ukraine</p>
 							
 					</figcaption>
 				</figure>
