--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
 <!-- FIRST SCREEN -->
-<section class="firstSection">
+<section class="firstSection fullWidth">
 		<div class="container-fluid">
 			<div class="row">
 
@@ -74,7 +74,7 @@
 					</nav>
 				</div>
 			
-				<div class="firstSection--content col-md-offset-3 col-md-5">
+				<div class="firstSection--content col-md-offset-3 col-md-8">
 					<p class="firstSection--content_mainText">26 років бездоганної репутації 
 						високоефективного бізнесу
 					</p>
@@ -407,18 +407,13 @@
 	<!-- Copyright -->
 	<div class="row">
 		<div class="col-xs-offset-5 col-xs-2">
-			<img src="./img/logo.png" alt="" class="footer-img img-responsive">
+			<p>Адрес БЦ <br> БЦ «ЛІГА» <br>
+			вул. Парково-Сирецька 23, <br>БЦ «ЛІГА», Київ, Україна, 04112
+				
+				+380445380110
+				office@ligagroup.com</p>
 		</div>
-		<div class="col-xs-offset-3 col-xs-6">
-			<ul class="footer-nav">
-				<li><a href="history.html">ПРО НАС</a></li>
-				<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
-				<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
-				<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
-				<li><a href="career.html">КАР’ЄРА</a></li>
-				<li><a href="contacts.html">КОНТАКТИ</a></li>
-			</ul>
-		</div>
+		
 
 	</div>
 	
