--- a/investors.html
+++ b/investors.html
@@ -30,7 +30,7 @@
 <body>
 
 	<!-- FIRST SCREEN -->
-	<section class="firstSection investors-fs">
+	<section class="firstSection investors-fs childPage">
 		<div class="container-fluid">
 			<div class="row">
 
@@ -63,7 +63,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-3 col-md-8">
+				<div class="firstSection--content col-md-offset-4 col-md-8">
 					<p class="firstSection--content_mainText">Відкритість та надійність
 						<br> в
 					партнерських відносинах</p>
