--- a/media.html
+++ b/media.html
@@ -30,7 +30,7 @@
 <body class="news">
 
 <!-- FIRST SCREEN -->
-<section class="firstSection news-fs">
+<section class="firstSection news-fs childPage">
 		<div class="container-fluid">
 			<div class="row">
 
@@ -63,7 +63,7 @@
 					</nav>
 				</div>
 
-				<div id="history-bg" class="firstSection--content col-md-offset-3 col-md-5">
+				<div id="history-bg" class="firstSection--content col-md-offset-3 col-md-8">
 					<p class="firstSection--content_mainText">Формуємо нову культуру
                             бізнес діяльності </p>
 				</div>
