--- a/social.html
+++ b/social.html
@@ -30,7 +30,7 @@
 <body>
 
 	<!-- FIRST SCREEN -->
-	<section class="firstSection social-fs">
+	<section class="firstSection social-fs childPage">
 		<div class="container-fluid">
 			<div class="row">
 
@@ -63,7 +63,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-3 col-md-6">
+				<div class="firstSection--content col-md-offset-3 col-md-9">
 					<p class="firstSection--content_mainText">Безперечний внесок
 						в національну економіку
 						та розвиток суспільства</p>
@@ -134,8 +134,19 @@
 					<p class="standat--textcolor fira--sans">Ми прагнемо раціонально використовувати природні ресурси та відповідально підходимо до поводження з відходами. Ми хочемо, щоб екологічна культура стала невід'ємною частиною життя наших співробітників та українців. <br><br>
 						Вже протягом п'яти років ми організовуємо ініціативу #ЧистийЧетвер, в рамках якої ми обираємо території, на яких створюємо простір, де приємно і зручно жити та відпочивати. ​
 						</p>	
-					<a class="standat--textcolor fira--sans link" href="#">Детальніше</a>
-
+					<a class="standat--textcolor fira--sans link" data-toggle="collapse" data-target="#demo">Детальніше</a>
+					<div id="demo" class="collapse"> 
+						<p class="standat--textcolor">
+							З 2015-го року в БЦ "ЛІГА" та інших офісах Компаній Групи реалізується концепція «Зеленого офісу». 
+							За цей час показники роботи з мінімізації впливу офісної діяльності на довкілля суттєві.
+							Ми вклали гроші в ресурсозберігаючі технології, чим на третину скоротили навантаження на застарілі електромережі міста в районі знаходження офісу.
+							Ми спрямовуємо зусилля на скорочення споживання електроенергії, тепла, води, паперу та інших матеріальних ресурсів. Усю канцелярію намагаймось замінити на продукцію із вторинної сировини. Кожен працівник став більш розумно відноситись до використання паперу для друку і без зайвої необхідності не роздруковувати. Запровадили роздільний збір сміття, збір відпрацьованих батарейок. Також ми Весь автопарк перевели на газ, чим зменшили кількість шкідливих викидів СО2 в атмосферу та обладнали велопарковку і тапер працівники мають можливість приїздити на роботу екологічно -на велосипеді чи мопеді. 
+							Діяльність компанії MÖBIUS, яка входить до складу ГК ЛІГА - це внесок у розбудову енергетичної незалежності нашої держави.​ Для запобігання забрудненню навколишнього середовища компанія MÖBIUS пропонує послуги з переробки та утилізації ТПВ з подальшим виробництвом корисних ресурсів: нафтопродуктів, вуглецю і металу.
+							Виробництво MÖBIUS являє собою замкнений цикл: утилізація відходів, виготовлення нафти, а також сорбенту, що здатен поглинати нафту в навколишньому середовищі. MÖBIUS застосовує безвідходні енергоефективні технології в процесі переробки твердих побутових відходів.
+							На початку 2017 року за ініціативи ТОВ «Мебіус Груп» та мережі автосервісних центрів «АТЛ» по всій території України організовані пункти збору відпрацьованих мастил. 
+							Разом із КМДА компанія MÖBIUS відкрила пункти збору зношених шин. Щороку в Україні накопичується більше 180 тисяч тон гумотехнічних виробів. З моменту запуску виробництва (1 червня 2014 року) компанія MÖBIUS вже утилізувала значну їх частину.
+						</p>
+					</div>
 				</div>
 
 			</div>
@@ -162,7 +173,13 @@
 						<p class="standat--textcolor dinPro bold caps">Благодійність та соціальні проекти</p>
 						<p class="standat--textcolor fira--sans">У 2015 році у складі ГК ЛІГА з’явився Міжнародний благодійний фонд «LET’S HELP!», заснований родиною Бондаренко. Адміністративні витрати Фонду повністю фінансуються засновниками, отже 100% залучених коштів використовується у благодійних цілях. В рамках фонду діє декілька спецпроектів: «ГІДНА СТАРІСТЬ»; «Волонтерчики», «BLACK BOX»; «WHITE BOX». <br>
 						</p>
-						<a class="standat--textcolor fira--sans link" href="#">Детальніше</a>
+						<a class="standat--textcolor fira--sans link" data-toggle="collapse" data-target="#demo2">Детальніше</a>
+					<div id="demo2" class="collapse"> 
+						<p class="standat--textcolor">
+							У 2015 році у складі ГК ЛІГА з’явився Міжнародний благодійний фонд «LET’S HELP!», заснований родиною Бондаренко. Адміністративні витрати Фонду повністю фінансуються засновниками, отже 100% залучених коштів використовується у благодійних цілях. В рамках фонду діє декілька спецпроектів: «ГІДНА СТАРІСТЬ»; «Волонтерчики», «BLACK BOX»; «WHITE BOX».
+							Задля запровадження соціального захисту усіх категорій населення, досягнення сталого рівня забезпеченості бідних та незахищених верств населення, а також забезпечення рівних прав та можливостей, в рамках фонду діє декілька спецпроектів: «ГІДНА СТАРІСТЬ»; «Волонтерчики», «BLACK BOX»; «WHITE BOX».
+						</p>
+					</div>
 				</div>
 
 			</div>
@@ -187,7 +204,12 @@
 								Щороку, починаючи з 2015, команда ГК ЛІГА бере участь у благодійному «Пробіг під каштанами», що відбувається в Києві. <br>
 								
 						</p>	
-						<a class="standat--textcolor fira--sans link" href="#">Детальніше</a>
+						<a class="standat--textcolor fira--sans link" data-toggle="collapse" data-target="#demo3">Детальніше</a>
+					<div id="demo3" class="collapse"> 
+						<p class="standat--textcolor">
+								З ініціативи ГК ЛІГА та МБФ «LET’S HELP!» у Ботанічному Саду ім. Гришка встановлений інклюзивний дитячий майданчик. Особливість цього майданчика в тому, що він розрахована як на дітей з особливими потребами, так і на звичайних дітей. Ця ініціатива має на меті формування культури рівних прав і можливостей в суспільстві.
+						</p>
+					</div>
 
 				</div>
 
@@ -213,8 +235,12 @@
 				<div class="social--ts_textblock" data-aos="fade-up" data-aos-delay="350"> 
 						<p class="standat--textcolor dinPro bold caps">Волонтерство</p>
 						<p class="standat--textcolor fira--sans">Ми заохочуємо і підтримуємо волонтерську діяльність наших співробітників. Програми корпоративного волонтерства ГК ЛІГА покликані зробити практичний внесок у вирішення значущих соціальних проблем суспільства, а також сприяють розвитку корпоративної культури і створюють умови для самореалізації співробітників.​<br></p>	
-						<a class="standat--textcolor fira--sans link" href="#">Детальніше</a>
-
+						<a class="standat--textcolor fira--sans link" data-toggle="collapse" data-target="#demo4">Детальніше</a>
+						<div id="demo4" class="collapse"> 
+							<p class="standat--textcolor">
+									В 2016-му році Юридичне об’єднання JUSCUTUM запустив партнерський проект із дитячим будинком «Чебурашка». В рамках якого адвокати  відвідують підопічних дитячого будинку, а також організовують екскурсії для дітей на різні підприємства.
+							</p>
+						</div>
 				</div>
 
 			</div>
@@ -232,8 +258,13 @@
 					<div class="social--ts_textblock" data-aos="fade-up" data-aos-delay="350"> 
 							<p class="standat--textcolor dinPro bold caps">Якісна освіта, гідна праця та економічне зростання </p>
 							<p class="standat--textcolor fira--sans">Про відповідальне ведення бізнесу свідчить створення умов для розвитку співробітників всередині компанії. Ми в ГК ЛІГА заснували «Школу управлінця», в якій пройшли навчання вже більше 500-та співробітників.<br></p>	
-							<a class="standat--textcolor fira--sans link" href="#">Детальніше</a>
-	
+							<a class="standat--textcolor fira--sans link" data-toggle="collapse" data-target="#demo5">Детальніше</a>
+						<div id="demo5" class="collapse"> 
+							<p class="standat--textcolor">
+									Протягом майже 20 років ЛІГА:ЗАКОН супроводжує Державний реєстр нормативно-правових актів спільно з Міністерством юстиції України. З 1999 року вона являється його технічним адміністратором. 
+
+							</p>
+						</div>
 					</div>
 	
 				</div>
