some fixes before we met

--- a/career.html
+++ b/career.html
@@ -142,25 +142,22 @@
 	</div>
 </section>
 <!-- THIRD SECTION END-->
-
 <!-- FOOTER -->
 <footer class="footer page-footer font-small blue">
 
 	<!-- Copyright -->
 	<div class="row">
-		<div class="col-xs-offset-5 col-xs-2">
-			<img src="./img/logo.png" alt="" class="footer-img img-responsive">
+		<div class="col-xs-offset-2 col-xs-4">
+			<p><a target="_blank" href="https://www.facebook.com/GKLIGA/"><i class="fa fa-2x fa-facebook-square" aria-hidden="true"></i></a></p>
+			<p>© 2018 LIGA GROUP. All rights reserved.</p>
+			
 		</div>
-		<div class="col-xs-offset-3 col-xs-6">
-			<ul class="footer-nav">
-				<li><a href="history.html">ПРО НАС</a></li>
-				<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
-				<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
-				<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
-				<li><a href="career.html">КАР’ЄРА</a></li>
-				<li><a href="contacts.html">КОНТАКТИ</a></li>
-			</ul>
+		<div class="col-xs-offset-2 col-xs-4">
+			<p> БЦ «ЛІГА» <br>
+				вул. Парково-Сирецька 23, Київ, Україна, 04112 <br>
+				office@ligagroup.com</p>
 		</div>
+		
 
 	</div>
 	
