--- a/investors.html
+++ b/investors.html
@@ -81,13 +81,13 @@
 			<div class="secondSection--content col-md-10">
 				<p class="secondSection--content_mainText standart--header" data-aos="fade-up">АКЦІОНЕРАМ ТА ІНВЕСТОРАМ</p>
 
-				<p class="standat--textcolor" data-aos="fade-left" data-aos-delay="150">ГК ЛІГА завжди готова до діалогу з теперішніми та потенційними інвесторами та партнерами.​
+				<p class="standat--textcolor" data-aos="fade-left" data-aos-delay="150">ГК ЛІГА завжди готова до діалогу з теперішніми та потенційними інвесторами й партнерами.
 				</p>
 
 				<p class="standat--textcolor" data-aos="fade-left" data-aos-delay="350">
-						Ми постійно розглядаємо нові проекти та наші існуючи проекти мають потенціал розвитку. Саме тому ми відкриті до всіх форматів ділової співпраці: від партнерства до прямих інвестицій чи залучення фінансування.​</p>			
+					Ми постійно розглядаємо нові проекти, а наші наявні проекти мають потенціал розвитку. Саме тому ми відкриті до всіх форматів ділової співпраці: від партнерства до прямих інвестицій чи залучення фінансування.​</p>			
 				<p class="standat--textcolor" data-aos="fade-left" data-aos-delay="550">
-						Наші ділові партнери поділяють наші цінності, а завдяки взаєморозумінню та спільним цілям кожен із бізнесів досягає успіху.​
+					Наші ділові партнери поділяють наші цінності, а завдяки взаєморозумінню та спільним цілям кожен із бізнесів досягає успіху.
 					</p>			
 				
 			</div>
@@ -107,9 +107,9 @@
 			</div>
 			<div class="col-md-5">
 				<div class="investors--ts_textblock" data-aos="fade-up" data-aos-delay="350"> 
-					<p class="col-sm-10 standat--textcolor fira--sans">Структура корпоративного управління ГК ЛІГА відповідає найвищим міжнародним стандартам і базується на найкращих світових практиках. Вона дозволяє швидко й ефективно приймати рішення, що забезпечує розвиток кожного з галузевих холдингів і напрямків бізнесу Групи. </p>
+					<p class="col-sm-10 standat--textcolor fira--sans">Структура корпоративного управління ГК ЛІГА відповідає найвищим міжнародним стандартам і базується на найкращих світових практиках. Вона дозволяє швидко й ефективно ухвалювати рішення, що забезпечує розвиток кожного з галузевих холдингів і напрямів бізнесу Групи. </p>
 
-					<p class="col-sm-10 standat--textcolor fira--sans">ГК ЛІГА на постійній основі інвестує кошти в зростання наявних напрямків бізнесу. Крім цього, ми готові інвестувати кошти в придбання нових бізнесів, які відповідатимуть нашим цінностям та стратегії розвитку Групи. </p>
+					<p class="col-sm-10 standat--textcolor fira--sans">ГК ЛІГА на постійній основі інвестує кошти у зростання наявних напрямів бізнесу. Крім цього, ми готові інвестувати кошти в нові проекти, які відповідатимуть нашим цінностям і стратегії розвитку Групи. </p>
 				</div>
 
 			</div>
@@ -122,25 +122,22 @@
 </section>
 <!-- THIRD SECTION END-->
 
-
 <!-- FOOTER -->
 <footer class="footer page-footer font-small blue">
 
 	<!-- Copyright -->
 	<div class="row">
-		<div class="col-xs-offset-5 col-xs-2">
-			<img src="./img/logo.png" alt="" class="footer-img img-responsive">
+		<div class="col-xs-offset-2 col-xs-4">
+			<p><a target="_blank" href="https://www.facebook.com/GKLIGA/"><i class="fa fa-2x fa-facebook-square" aria-hidden="true"></i></a></p>
+			<p>© 2018 LIGA GROUP. All rights reserved.</p>
+			
 		</div>
-		<div class="col-xs-offset-3 col-xs-6">
-			<ul class="footer-nav">
-				<li><a href="history.html">ПРО НАС</a></li>
-				<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
-				<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
-				<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
-				<li><a href="career.html">КАР’ЄРА</a></li>
-				<li><a href="contacts.html">КОНТАКТИ</a></li>
-			</ul>
+		<div class="col-xs-offset-2 col-xs-4">
+			<p> БЦ «ЛІГА» <br>
+				вул. Парково-Сирецька 23, Київ, Україна, 04112 <br>
+				office@ligagroup.com</p>
 		</div>
+		
 
 	</div>
 	
